# c99-to-c89

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  Makefile.w32  compilewrap.c  convert.c  vcpkg.json
recipe/: bld.bat  build.sh  meta.yaml
recipe/tests/: check-2.c  stream_encoder.c.converted.c  stream_encoder.c.obj_preprocessed.c
src/main/: compilewrap.c  convert.c
src/test/test1/: expected_output.c  preprocessed.c
src/test/test2/: expected_output.c  preprocessed.c
src/test/test2/output/: .gitignore
src/test/test3-large/: expected_output.c  preprocessed.c
src/test/test3b-large-with-response-file/: response-file
src/test/test3c-large-with-response-file-bom/: response-file
